--- a/package.json
+++ b/package.json
@@ -14,22 +14,76 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.17",
-    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.21",
-    "@docusaurus/preset-classic": "2.0.0-beta.17",
-    "@docusaurus/theme-search-algolia": "^2.0.0-beta.17",
+    "@algolia/autocomplete-core": "1.7.2",
+    "@algolia/autocomplete-preset-algolia": "1.7.2",
+    "@babel/helper-compilation-targets": "7.20.0",
+    "@babel/helper-string-parser": "7.19.4",
+    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "7.18.9",
+    "@babel/plugin-proposal-async-generator-functions": "7.20.1",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.18.9",
+    "@babel/plugin-proposal-object-rest-spread": "7.20.2",
+    "@babel/plugin-syntax-import-assertions": "7.20.0",
+    "@babel/plugin-transform-block-scoping": "7.20.5",
+    "@babel/plugin-transform-classes": "7.20.2",
+    "@babel/plugin-transform-computed-properties": "7.18.9",
+    "@babel/plugin-transform-destructuring": "7.20.2",
+    "@babel/plugin-transform-duplicate-keys": "7.18.9",
+    "@babel/plugin-transform-for-of": "7.18.8",
+    "@babel/plugin-transform-function-name": "7.18.9",
+    "@babel/plugin-transform-literals": "7.18.9",
+    "@babel/plugin-transform-modules-amd": "7.19.6",
+    "@babel/plugin-transform-modules-commonjs": "7.19.6",
+    "@babel/plugin-transform-modules-systemjs": "7.19.6",
+    "@babel/plugin-transform-named-capturing-groups-regex": "7.20.5",
+    "@babel/plugin-transform-spread": "7.19.0",
+    "@babel/plugin-transform-template-literals": "7.18.9",
+    "@babel/plugin-transform-typeof-symbol": "7.18.9",
+    "@babel/plugin-transform-unicode-escapes": "7.18.10",
+    "@docsearch/css": "3.3.0",
+    "@docsearch/react": "3.3.0",
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/plugin-debug": "2.2.0",
+    "@docusaurus/plugin-google-analytics": "2.2.0",
+    "@docusaurus/plugin-google-gtag": "2.2.0",
+    "@docusaurus/plugin-sitemap": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/theme-classic": "2.2.0",
+    "@docusaurus/theme-search-algolia": "2.2.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "@types/semver": "7.3.13",
+    "@typescript-eslint/scope-manager": "5.46.1",
+    "@typescript-eslint/typescript-estree": "5.46.1",
+    "@typescript-eslint/utils": "5.46.1",
+    "algoliasearch-helper": "3.11.1",
+    "cheerio": "1.0.0-rc.12",
     "clsx": "^1.1.1",
+    "core-js-pure": "3.26.1",
+    "css-declaration-sorter": "6.3.1",
+    "cssnano-preset-advanced": "5.3.9",
     "d3": "^7.3.0",
+    "enhanced-resolve": "5.12.0",
+    "infima": "0.2.0-alpha.42",
+    "postcss-convert-values": "5.1.3",
+    "postcss-merge-longhand": "5.1.7",
+    "postcss-merge-rules": "5.1.3",
+    "postcss-minify-params": "5.1.4",
+    "postcss-normalize-unicode": "5.1.1",
+    "postcss-reduce-initial": "5.1.1",
     "prism-react-renderer": "^1.2.1",
+    "prismjs": "1.29.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-tiny-popover": "^7.2.0",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^8.2.0",
+    "rtlcss": "3.5.0",
+    "selfsigned": "2.1.1",
+    "stylehacks": "5.1.1",
+    "watchpack": "2.4.0"
   },
   "browserslist": {
     "production": [
@@ -44,8 +98,8 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/eslint-plugin": "^2.0.0-beta.20",
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.20",
+    "@docusaurus/eslint-plugin": "2.2.0",
+    "@docusaurus/module-type-aliases": "^2.2.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "typescript": "^4.7.2"
   }
