--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@giscus/react": "^2.2.6",
+    "@happyreact/react": "^0.1.1",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
