--- a/.github/workflows/vale-linter.yml
+++ b/.github/workflows/vale-linter.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: errata-ai/vale-action@reviewdog
         with:
           files: '["docs", "versioned_docs"]'
+          fail_on_error: true
         env:
           # Required, set by GitHub actions automatically:
           # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#about-the-github_token-secret
