--- a/.github/workflows/vale-linter.yml
+++ b/.github/workflows/vale-linter.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           files: '["docs", "versioned_docs"]'
           fail_on_error: true
+          reporter: github-pr-check
+          filter_mode: nofilter
         env:
           # Required, set by GitHub actions automatically:
           # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#about-the-github_token-secret
