--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,7 @@
 StylesPath = .github/styles
 MinAlertLevel = warning
+SkippedScopes = script, style, pre, figure
+IgnoredScopes = code, tt
 
 [*/*.md]
-BasedOnStyles = Google
+BasedOnStyles = Vale, Google
