--- a/.vale.ini
+++ b/.vale.ini
@@ -2,5 +2,5 @@ StylesPath = .github/styles
 MinAlertLevel = warning
 
 [*/*.md]
-BasedOnStyles = Vale, Google
+BasedOnStyles = Vale
 SkippedScopes = script, style, pre, figure
