--- a/.vale.ini
+++ b/.vale.ini
@@ -3,4 +3,6 @@ MinAlertLevel = warning
 
 [*/*.md]
 BasedOnStyles = Vale, Google
-SkippedScopes = script, style, pre, figure
+Vale.Terms = NO
+IgnoredScopes = code, tt
+SkippedScopes = script, style, pre, figure, i
