--- a/.github/workflows/vale-linter.yml
+++ b/.github/workflows/vale-linter.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: errata-ai/vale-action@reviewdog
         with:
           files: '["docs", "versioned_docs"]'
-          fail_on_error: true
+          fail_on_error: false
           reporter: github-pr-check
           filter_mode: nofilter
         env:
