--- a/.vale.ini
+++ b/.vale.ini
@@ -2,6 +2,6 @@ StylesPath = .github/styles
 MinAlertLevel = suggestion
 
 [*/*.md]
-BasedOnStyles = Vale, Google
+BasedOnStyles = Vale
 IgnoredScopes = code, tt
 SkippedScopes = script, style, pre, figure, i
