--- a/.vale.ini
+++ b/.vale.ini
@@ -5,3 +5,4 @@ MinAlertLevel = suggestion
 BasedOnStyles = Vale
 IgnoredScopes = code, tt
 SkippedScopes = script, style, pre, figure, i
+Vale.Terms = No
