feat: use react-declarative

--- a/package.json
+++ b/package.json
@@ -18,20 +18,23 @@
     "@docusaurus/plugin-google-analytics": "^2.3.1",
     "@docusaurus/preset-classic": "^2.3.1",
     "@docusaurus/theme-search-algolia": "^2.3.1",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@giscus/react": "^2.2.6",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.123",
+    "@mui/material": "^5.11.13",
     "clsx": "^1.1.1",
     "d3": "^7.3.0",
-    "mson-react": "^1.11.1",
     "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-declarative": "^2.2.114",
+    "react-dom": "^18.2.0",
     "react-tiny-popover": "^7.2.0",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^8.2.0",
+    "tss-react": "^4.8.2",
+    "xlsx": "^0.18.5"
   },
   "browserslist": {
     "production": [
