feat: use jsonforms

--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "@docusaurus/plugin-google-analytics": "^2.3.1",
     "@docusaurus/preset-classic": "^2.3.1",
     "@docusaurus/theme-search-algolia": "^2.3.1",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@giscus/react": "^2.2.6",
+    "@jsonforms/core": "^3.0.0",
+    "@jsonforms/examples": "^3.0.0",
+    "@jsonforms/material-renderers": "^3.0.0",
+    "@jsonforms/react": "^3.0.0",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.123",
+    "@mui/material": "^5.11.13",
+    "@mui/x-date-pickers": "^6.0.2",
     "clsx": "^1.1.1",
     "d3": "^7.3.0",
-    "mson-react": "^1.11.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
